--- a/layouts/landing.html
+++ b/layouts/landing.html
@@ -236,7 +236,7 @@
 						</a>
 						<h3 class="text-center">Download BowlerStudio for:</h3>
 						<h3 class="text-center">
-							<a href="<%=@item[:winInstaller64]%>">Windows 64 Bit (7 and 10)</a>
+							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Windows 64 Bit (7 and 10)</a>
 						</h3>
 						<p class="lead">Run Installer and double click on Bowler
 							Studio shortcut on your desktop.</p>
@@ -247,7 +247,7 @@
 							style="margin-left: auto; margin-right: auto;">
 						</a>
 						<h3 class="text-center">
-							<a href="<%=@item[:linInstaller]%>">Download BowlerStudio for Linux (Ubuntu 16.04 LTS)</a>
+							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Download BowlerStudio for Linux (Ubuntu 16.04 LTS)</a>
 						</h3>
 						
 
@@ -280,7 +280,7 @@
 							style="margin-left: auto; margin-right: auto;">
 						</a>
 						<h3 class="text-center">
-							<a href="<%=@item[:macInstaller]%>">Download BowlerStudio for Mac (10.7+)</a>
+							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Download BowlerStudio for Mac (10.7+)</a>
 							</p>
 							<p class="lead">
 								Extract ZIP file and double click on
