--- a/layouts/landing.html
+++ b/layouts/landing.html
@@ -230,13 +230,13 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-4 col-sm-4">
-						<a href="https://github.com/NeuronRobotics/BowlerStudio/releases"> <img
+						<a href="https://github.com/CommonWealthRobotics/BowlerStudio/releases"> <img
 							class="img-responsive" src="img/windows_logo.png" class="img-responsive" alt=""
 							size="80%" style="margin-left: auto; margin-right: auto;">
 						</a>
 						<h3 class="text-center">Download BowlerStudio for:</h3>
 						<h3 class="text-center">
-							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Windows 64 Bit (7 and 10)</a>
+							<a href="https://github.com/CommonWealthRobotics/BowlerStudio/releases">Windows 64 Bit (7 and 10)</a>
 						</h3>
 						<p class="lead">Run Installer and double click on Bowler
 							Studio shortcut on your desktop.</p>
@@ -247,7 +247,7 @@
 							style="margin-left: auto; margin-right: auto;">
 						</a>
 						<h3 class="text-center">
-							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Download BowlerStudio for Linux (Ubuntu 16.04 LTS)</a>
+							<a href="https://github.com/CommonWealthRobotics/BowlerStudio/releases">Download BowlerStudio for Linux (Ubuntu 16.04 LTS)</a>
 						</h3>
 						
 
@@ -280,7 +280,7 @@
 							style="margin-left: auto; margin-right: auto;">
 						</a>
 						<h3 class="text-center">
-							<a href="<https://github.com/CommonWealthRobotics/BowlerStudio/releases>">Download BowlerStudio for Mac (10.7+)</a>
+							<a href="https://github.com/CommonWealthRobotics/BowlerStudio/releases">Download BowlerStudio for Mac (10.7+)</a>
 							</p>
 							<p class="lead">
 								Extract ZIP file and double click on
