--- a/layouts/landing.html
+++ b/layouts/landing.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta http-equiv="refresh" content="5;url=http://commonwealthrobotics.com/" />
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
